[package]
name = "languages"
version = "0.0.2"
edition = "2024"
build = "build.rs"

authors = ["Aldo Cortesi <aldo@corte.si>"]
description = "GitHub's language data, compiled into a tiny, fast Rust library"
license = "MIT"
repository = "https://github.com/cortesi/languages"
keywords = ["linguist", "languages", "github"]

[dependencies]
once_cell = "1.18"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
